--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -329,8 +329,8 @@ extracting historical information from linked genome data.
 % In other words, there
 % are usually very few mutations to provide information about each genealogy, 
 % and ...
-A major advance was achieved through development of the Sequentially Markov 
-Coalescent (SMC), a simpler approximation of the coalescent with recombination
+A major advance was achieved through development of the sequentially Markov 
+coalescent (SMC), a simpler approximation of the coalescent with recombination
 that restricts the types of recombination events that can occur 
 \citep{mcvean2005approximating}. Specifically,
 an edge that is detached from a genealogy by recombination is allowed only to
@@ -524,9 +524,9 @@ sequential genealogies
 (2) shortening of a coalescent time; (3) lengthening of a coalescent time; 
 and (4) %a coalescent event that changes the topology (relationships). 
 a change to the genealogical topology (relationships).
-\hl{These can be grouped more generally into three types: 
+These can be grouped more generally into three types: 
 "no-change" (category 1), "tree-change" (categories 2-4), and "topology-change"
-(category 4).} Recently, \citet{deng_distribution_2021} derived a set of solutions for
+(category 4). Recently, \citet{deng_distribution_2021} derived a set of solutions for
 the expected waiting distances to each of these three types of 
 outcomes for a single population with constant effective population size.
 % Although all three outcomes, and their associated waiting distances, occur 
@@ -875,7 +875,7 @@ similar to equation 1.
 % the expected waiting time as until re-coalescence the 
 % same as described above (equations 1 and 2).
 
-In a single population model with constant $N_e$ the expected waiting time until 
+In a single population model with constant $N_e$, the expected waiting time until 
 re-coalescence increases monotonically with each coalescence event 
 backwards in time, since each event decreases $k$.
 % (e.g., Fig.~1B). 
@@ -892,7 +892,7 @@ series of relevant intervals between events that change rates of coalescence,
 % , including within species tree intervals, 
 which we refer to as the genealogy embedding table (Table~\ref{tab:table-1}). 
 From this table it is possible to calculate the probabilities of different
-recombination event type outcomes, and consequently, to model the expected 
+recombination event type outcomes and, consequently, to model the expected 
 waiting distances until specific recombination event types occur. 
 
 % Using this information on the rate of coalescence within each genealogy
@@ -1175,10 +1175,10 @@ of a recombination event bisecting branch $b$ at time $t_r$. %The variable $\sig
 For no change to occur to the genealogy, the detached subtree must re-coalesce with 
 its original branch -- either in the same interval from which it detached, or in a
 later interval on the same branch (Fig.~\ref{fig:fig3}a). %during the same interval in which it detached.
-If it connects to any other lineage this will cause a change to either the tree 
+If it connects to any other lineage, this will cause a change to either the tree 
 or topology. 
 Equation 3 describes the probability of a no-change event 
-given a genealogy embedded in a species tree, and the timing and branch on 
+given a genealogy embedded in a species tree and given the timing and branch on 
 which recombination occurs. The interval in which recombination occurs 
 % at time $t_r$ on branch $b$ 
 is labeled $i$. 
@@ -1249,7 +1249,7 @@ between $i$ and $j$. For this latter process, we define another
 indexing variable, $\mathcal{Q}_b(i,j)$ = $\{q \in \mathcal{I}_b ~|~ j > q > i\}$, 
 for iterating over the ordered intervals above $i$ and below $j$ 
 on branch $b$ (e.g., Fig.~\ref{fig:fig3}c).
-The function $f(i,j)$ forms the core of the MS-SMC algorithm, and 
+The function $f(i,j)$ forms the core of the MS-SMC algorithm and 
 will reappear in several later equations.
 
 \begin{equation}
@@ -1388,8 +1388,8 @@ be calculated from the exponential probability density function
 is of the no-change type, we can now calculate 
 the rate of no-change type events as a proportion of the rate of all types of 
 recombination events. 
-Here, waiting distances continue to be exponentially distributed, 
-however the new rate parameter $\lambda_n$ is reduced proportionally by 
+Here, waiting distances continue to be exponentially distributed. 
+However, the new rate parameter $\lambda_n$ is reduced proportionally by 
 the probability that recombination causes no change to the genealogy
 (equation 9). Similarly, because a tree-change event is the opposite 
 of a no-change event, its probability is one minus the probability
@@ -1441,15 +1441,15 @@ Our approach follows closely to that of \citet{deng_distribution_2021}.
 % events that affect only coalescence times but not the topology. We refer
 % to this set of events as "topology-unchanged".
 % of categories 2 and 3 to isolate the waiting distance to a category 4 event. 
-In order to isolate re-coalescence events that do not change the topology
+In order to isolate re-coalescence events that do not change the topology,
 % only affect branch
 % lengths from those that affect the topology 
 we must take into account which specific branches the detached subtree from 
 branch $b$ re-coalesces with. The relevant branches are its source ($b$), 
 its sibling ($b'$), and its parent ($c$) (Fig.~\ref{fig:fig3}d). 
-If the subtree re-coalesces with $b$ no change occurs; if it re-coalesces
-with $b'$ the topology remains the same but a coalescent time is shortened;
-and if it re-coalesces with $c$ the topology remains the same but a coalescent 
+If the subtree re-coalesces with $b$, no change occurs; if it re-coalesces
+with $b'$, the topology remains the same but a coalescent time is shortened;
+and if it re-coalesces with $c$, the topology remains the same but a coalescent 
 time is lengthened. A re-coalescence with any other branch will change the topology.
 % Once again, we start by deriving branch-specific probabilities and then sum 
 % these across all branches on a genealogy. 
@@ -1484,7 +1484,7 @@ time is lengthened. A re-coalescence with any other branch will change the topol
 % calculated the probability of a no-change event, we now calculate this probability 
 % in addition to the probability of a change that affects only coalescent times and not the topology. 
 To index over relevant intervals across the three branches on which re-coalescence
-can occur we define several additional variables. The lowest time point in which both 
+can occur, we define several additional variables. The lowest time point in which both 
 $b$ and $b'$ are present and exist within the same species tree interval is labeled 
 $t_b^m$. For a branch $b$ with intervals $\mathcal{I}_b$, the subset of intervals 
 below $t_b^m$ is $\mathcal{L}_b$, and the subset above is $\mathcal{M}_b$. 
@@ -1497,7 +1497,7 @@ The union of the sets of intervals on branches $b$ and $c$ is $\mathcal{I}_{bc}$
 % To do this, 
 
 Once again, we begin by assuming knowledge of the branch on which a 
-recombination event occurs and its timing. This problem can be broken 
+recombination event occurs and of that event's timing. This problem can be broken 
 into two distinct cases: when $t_r$ occurs below $t_b^m$, and when it 
 occurs above $t_b^m$. The former requires integrating over additional 
 intervals on $b$ that are not shared with $b'$. Over all intervals
@@ -1749,7 +1749,7 @@ A recombination event either does or does not change the topology
 of a genealogy, and we can therefore get the probability of a 
 topology-change event using our topology-unchanged probability statement.
 As with the previous waiting distance distributions, the distance between
-topology change events given a parameterized MSC model can be 
+topology-change events given a parameterized MSC model can be 
 modeled as an exponential probability distribution. 
 Similar to how a rate parameter was derived for the distribution 
 of waiting distances until a recombination event (equation 7), 
@@ -1861,7 +1861,7 @@ using an exponential probability density parameterized by the MS-SMC.
 %Tree-based operations are performed with 
 Our implementation is built upon \emph{toytree} \citep{eaton_toytree_2020}, 
 \emph{scipy} \citep{2020SciPy-NMeth}, and 
-\emph{numpy} \citep{harris2020array}, and uses jit-compilation with \emph{numba} 
+\emph{numpy} \citep{harris2020array}, and it uses jit-compilation with \emph{numba} 
 \citep{lam2015numba}. 
 Below we use \emph{ipcoal} (v.0.4.0) to demonstrate the impact of 
 MSC model parameters on waiting distances and to validate our solutions against 
@@ -1962,8 +1962,8 @@ number of samples will increase back from 2 to 3,
 thus decreasing the probability of a no-change event. 
 This visualization demonstrates how the probabilities of different recombination 
 event types represent an integration over all the positions on a branch where 
-recombination could occur, and all positions at or above that point, and on the 
-same or different available branches, where a detached branch could re-coalesce. 
+recombination could occur, and all positions at or above each of these points (whether on the 
+same or different available branches) where a detached subtree could re-coalesce. 
 % This visualization demonstrates how calculating the probabilities of different recombination 
 % event types requires integrating over all the positions on a branch where 
 % recombination could occur, while simultaneously integrating over all points at which the detached
@@ -1983,7 +1983,7 @@ Branch 7 provides a clear example for examining the probabilities of
 tree- and topology-change events. Of particular interest is the 
 % (added suspended hyphen above after "tree")
 interval from $W_{AB}$ to $W_{ABC}$ where these probabilities diverge 
-significantly (Fig.~\ref{fig:fig2}c-d). 
+significantly (Fig.~\ref{fig:fig1}c-d). 
 % Another example is clear from examining probabilities across branch 7,
 % which spans three species tree intervals. 
 % To better understand probabilities of tree and topology-change events let 
@@ -2046,7 +2046,7 @@ $N_e$ is high or accentuates differences among intervals when $N_e$ is low.
 		MS-SMC predictions validated against coalescent simulations.
 		(a) Results are shown for three models containing 1, 2, or 8 
 		populations. % among which genealogies for 8 samples were embedded. 
-		For each model 10K tree sequences were simulated for 10 different
+		For each model, 10K tree sequences were simulated for 10 different
 		constant $N_e$ values between 50K and 500K. 
 		(b) The distributions of summed edge lengths of the first genealogy in 
 		each tree sequence. 
@@ -2231,8 +2231,8 @@ information in MSC models than in single population models.
 % than tree-change waiting distances. 
 
 \subsection{Bias in waiting distance estimation}
-Estimated waiting distances under the MS-SMC’ harbor two potential sources of bias, 
-the first stemming from assumptions of the SMC’ approximation, and the second from 
+Estimated waiting distances under the MS-SMC harbor two potential sources of bias, 
+the first stemming from assumptions of the SMC' approximation, and the second from 
 the approximate nature of waiting distance estimation for topology-change events. 
 We examined both of these sources of error through comparison to stochastic simulations
 and found that their effects are generally small, and that multispecies models exhibit 
@@ -2322,14 +2322,14 @@ that maximize the summed log-likelihood of the observed waiting distances.
 
 We first implemented this approach for a simple two-population model with 
 constant $N_e$=200K and a population divergence at 500K generations. 
-We simulated 100 independent ARGs, each 100Kb in length, using $r$=2e$^{-9}$, 
+We simulated 100 independent ARGs, each 100Kb in length, using $r$=2e-9, 
 and we sampled four haplotypes per population. This 
 yielded 51,487 tree-change events, with mean length 194bp, and 25,446 
 topology-change events, with mean length 393bp. To examine the likelihood
-surface we calculated the log-likelihood of joint parameters for $N_e$ and $r$, 
+surface, we calculated the log-likelihood of joint parameters for $N_e$ and $r$, 
 while keeping a fixed divergence time parameter, over a grid search of 41
-evenly-spaced values from $r$=1e$^{-9}$-3e$^{-9}$ and $N_e$
-50K-800K. The likelihood
+evenly spaced values from $r$=1e-9 to 3e-9 and 
+$N_e$=50K to 800K. The likelihood
 surface for tree-change distances exhibited a ridge containing the true 
 parameter values (Fig.~\ref{fig:fig-likelihood}b), while the topology-change 
 likelihood surface exhibited a distinct peak at the true values
@@ -2366,7 +2366,7 @@ chain Monte Carlo (MCMC) algorithm to compute the joint posterior
 probability distribution of multiple $N_e$ parameters for a 
 2-population model with variable $N_e$ of 200K, 300K, or 400K
 (Fig.~\ref{fig:fig-likelihood-posterior}a).
-The input ARGs were simulated under this more complex MSC model, but otherwise
+The input ARGs were simulated under this more complex MSC model but otherwise
 used the same settings as in the example above.
 % , and in this case, we sampled 8 haplotypes per population. 
 We set a uniform prior on all three $N_e$ parameters between 
@@ -2558,13 +2558,13 @@ the scale over which they extract information from genomes -- extending forward
 just one recombination event at a time. 
 By contrast, the recent development of solutions for predicting 
 tree- and topology-change waiting distances under the SMC' \citep{deng_distribution_2021} 
-effectively adds two additional longer-range sources of information for 
+effectively adds two additional, longer-range sources of information for 
 any position in a genome. 
 % \hl{In this original formulation,} 
-\hl{In their model,}
+In their model,
 these distances are a 
 result of the probabilities of different phenomenological outcomes of the 
-SMC’ process given a genealogy embedded in a single population coalescent
+SMC' process given a genealogy embedded in a single population coalescent
 model with constant $N_e$.
 % ^prob worth cleaning up this sentence
 % within the constraints of a demographic model.
@@ -2614,9 +2614,10 @@ implementation relative to stochastic simulations performed under both the
 full coalescent with recombination and the SMC' approximation 
 \citep{hudson1983properties,wiuf_recombination_1999,mcvean2005approximating}. 
 % \hl{Within our framework, MSC model parameters determine rates of coalescence}
-\hl{Within our framework, MSC model parameters determine probabilities of coalescence}
-in species tree intervals and prevent coalescence between lineages separated
-into different species tree intervals.
+Within our framework, MSC model parameters determine probabilities of coalescence
+in species tree intervals and prevent coalescence between lineages that are separated
+%into different species tree intervals.
+by species divergence events.
 %and dictate where coalescence may occur, 
 % preventing coalescences among lineages separated into different
 % species tree intervals. 
@@ -2625,7 +2626,7 @@ into different species tree intervals.
 The effects of MSC model parameters on spatial genealogical variation can be statistically
 modeled and visualized (Fig.~\ref{fig:fig1}; Fig.~\ref{fig:figS-edge-probabilities}), and 
 our examples show that the neutral rate
-of turnover in genealogies and topologies across a genome is highly 
+of turnover in genealogical trees and topologies across a genome is highly 
 dependent on species tree model parameters.
 % feels like disconnected sentences
 
@@ -2658,8 +2659,8 @@ impractical for estimating the persistence of \emph{individual} genealogies.
 % Similarly, it did not... more here please.
 %\hl{In addition to providing fast calculations of waiting distances, 
 %analytical solutions also offer the opportunity to develop likelihood-based
-The analytical solutions presented here not only enable fast calculations, but also the opportunity to develop likelihood-based
-methods for fitting models that link MSC model parameters to ARGs.
+The analytical solutions presented here not only enable fast calculations but also the opportunity to develop likelihood-based
+methods for fitting models that link MSC parameters to ARGs.
 %%feels out of place -- eg we haven't used the word "analytical" yet
 % I'm OK with it, I think.
 
@@ -2676,7 +2677,7 @@ methods for fitting models that link MSC model parameters to ARGs.
 
 % This framework can be extended...
 Many extensions of the MS-SMC are possible, including applications to more
-complex demographic models, and the development of specific hypothesis testing
+complex demographic models and the development of specific hypothesis testing
 frameworks. 
 % allowing for the development
 % of hypothesis testing frameworks, or applications to more complex demographic models.
@@ -2803,7 +2804,7 @@ scale of entire chromosomes, and usually to samples that are modeled
 as being in a single population 
 \citep{rasmussen2014genome, kelleher2019inferring, speidel2019method}.
 However, ARGs can exist for any stretch of the genome, 
-including short aligned contigs, \hl{or genes,} and \hl{recent methods can} 
+including short aligned contigs, and recent methods can 
 infer ARGs conditional on a structured demographic model that 
 includes splits between more distantly related genomes 
 \citep{hubisz2020inference}.
