--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1208,7 +1208,7 @@ for iterating over the ordered intervals above $i$ on branch $b$ (e.g., Fig.~\re
 		branch on which recombination occurred, for which intervals are indexed using
 		the variable $\mathcal{I}_b$.
 		%, or $\mathcal{J}_b(i)$. 
-		(b) Indexing variables for calculating tree change probabilities. The indexing 
+		(b) Indexing variables for calculating tree-change probabilities. The indexing 
 		variable $\mathcal{I}_b$ records all intervals on branch $b$, and the 
 		recombination event for this example occurs in interval $i=0$. $\mathcal{J}_b(i)$ 
 		returns all intervals in $\mathcal{I}_b$ above interval $i$.
