fixed sum in equation 5 in appendix

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1335,7 +1335,7 @@ change the tree:
 	\bigg)\right]
 	% \Bigg)
 \end{aligned}
-\end{equation}
+\end{equation}g
 % \begin{equation}
 % 	= \frac{1}{t^u_b - t^l_b}
 % 	\sum_{i=0}^{\mathcal{I}_b-1} \frac{1}{a_i} d_i + 
@@ -4212,15 +4212,15 @@ in equation 5 from the main text.
 \begin{equation}\tag{5}
 	= \frac{1}{t_b^u - t_b^l}
 	\sum_{i \in \mathcal{I}_b} 
-	\frac{1}{k_i} d_i + 
+	\left[\frac{1}{k_i} d_i + 
 	\Bigg(
 		\frac{2n_i}{k_i} 
-		\sum_{j \in \mathcal{J}_b(i)} f(i,j)
+		\sum_{j \in \mathcal{I}_b} f(i,j)
 		\bigg(
 			\exp\bigg\{ \frac{k_i}{2n_i} \mu_i \bigg\} - 
 			\exp\bigg\{ \frac{k_i}{2n_i} \sigma_i \bigg\}
 		\bigg)
-	\Bigg)
+	\Bigg)\right]
 \end{equation}
 
 
