took out a random letter g that was hanging out after an equation...

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -1335,7 +1335,7 @@ change the tree:
 	\bigg)\right]
 	% \Bigg)
 \end{aligned}
-\end{equation}g
+\end{equation}
 % \begin{equation}
 % 	= \frac{1}{t^u_b - t^l_b}
 % 	\sum_{i=0}^{\mathcal{I}_b-1} \frac{1}{a_i} d_i + 
