Added in the significance statement to the pdf

--- a/manuscript/waiting-distances.tex
+++ b/manuscript/waiting-distances.tex
@@ -87,6 +87,20 @@ Keywords: Recombination, Phylogeny, SMC, Gene Tree, Species Tree, Concatalescenc
 
 \RaggedRight
 
+\section*{Significance Statement}
+Genealogical relationships vary spatially along genomes as a result of coalescent
+ variation and recombination through time. These spatial genealogical patterns 
+ contain rich information about the evolutionary history of populations but are 
+ difficult to reconstruct from sequence data. Here, we extend recently developed 
+ theory for predicting the genomic interval lengths between changes in 
+ genealogical trees (different coalescent times) or topologies (different 
+ coalescent times and relationships). Our new solutions allow for calculating 
+ these “waiting distances” within the context of a parameterized species tree 
+ model. This new framework, termed the MS-SMC, provides a link between the 
+ multispecies coalescent (MSC) and the sequentially Markov coalescent (SMC), 
+ paving the way for new spatial phylogenetic inference methods capable of 
+ analyzing linked genome data.
+
 \section*{Abstract}
 Genomes are composed of a mosaic of segments inherited from different ancestors, 
 each separated by past recombination events. Consequently, genealogical
